1.Change crosshair scale according to distance. 2.Gun sight(Click right button to open sight, scroll wheel to zoom in and out)

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,7 +65,9 @@
      <Compile Include="Assets\Scripts\BulletPool.cs" />
      <Compile Include="Assets\Scripts\DrawCrossHair.cs" />
      <Compile Include="Assets\Scripts\GenericGameObject.cs" />
+     <Compile Include="Assets\Scripts\MyUtils.cs" />
      <Compile Include="Assets\Scripts\ObjectPool.cs" />
+     <Compile Include="Assets\Scripts\SightingZoom.cs" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>H:/Projects/BasicFPSGame/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
